New HOSTNAME_API Env for JS integration.

--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,7 @@ MAIL_SERVER=smtp.gmail.com
 MAIL_USERNAME=contact@your-mail-server.com
 MAIL_PASSWORD=PASSWORD
 HOSTNAME=http://localhost:8080/
+HOSTNAME_API=http://localhost:8080/
 USE_GEOIP2=true
 GEOIP2_BASE=GeoIP2-City.mmdb
 ADMIN_USERNAME=adminuser
